# metastatic-tissue-classifier

./: .dockerignore  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebook/: Dockerfile  export_onnx.py  lambda_function.py  notebook.ipynb  test_api.py  train.py
